...
                        : Colors.white,
                centerTitle: true,
                actions: [
                  IconButton(
                    key: const Key('Settings'),
                    icon: Icon(
                      key: const Key('settingsButton'),
                      Icons.settings,
                      color: myAppKey.currentState?.currentTheme ==
                              ThemeMode.dark
                          ? Colors.white
                          : Colors.black,
                    ),
...
                      widget.databaseService.getUserByUid(widget.userId!);
                }
              }));
            },
          ),
        ListTile(
          key: const Key('Nazioni Visitate'),
          leading: const Icon(Icons.travel_explore_outlined),
          title: Text('Nazioni Visitate',
              style: Theme.of(context).textTheme.bodyMedium),
          onTap: () {
            if (!isTablet) Navigator.pop(context);
            Navigator.push(
...
            }));
          },
        ),
        // Opzione "Tema" condizionale
        if (_isMyProfile)
          ListTile(
            key: const Key('Theme Settings'),
            title: Text(
                myAppKey.currentState?.currentTheme == ThemeMode.dark
                    ? 'Tema chiaro'
                    : 'Tema scuro',
                style: Theme.of(context).textTheme.bodyMedium),
            leading: Icon(
...
